--- a/package.json
+++ b/package.json
@@ -3,13 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve --port 4001",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@jamescoyle/svg-icon": "^0.2.1",
+    "@jamescoyle/vue-icon": "^0.1.2",
+    "@mdi/font": "5.9.55",
+    "@mdi/js": "^7.4.47",
+    "axios": "^0.27.2",
+    "bootstrap": "^5.3.3",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "css-loader": "^7.1.2",
+    "material-design-icons-iconfont": "^6.7.0",
+    "roboto-fontface": "*",
+    "sass": "^1.81.0",
+    "sass-loader": "^16.0.3",
+    "styled-loader": "^0.0.0",
+    "sweetalert2": "^11.15.10",
+    "vue": "^3.5.13",
+    "vue-router": "^4.0.13",
+    "vue-sweetalert2": "^5.0.11",
+    "vuex": "^4.1.0",
+    "vuex-persistedstate": "^4.1.0",
+    "webfontloader": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -17,8 +35,15 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "autoprefixer": "^10.4.21",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
+    "vite-plugin-vuetify": "^2.0.4",
+    "vue-cli-plugin-vuetify": "~2.5.8",
+    "vuetify": "^3.7.4",
+    "webpack-plugin-vuetify": "^2.0.0-alpha.0"
   },
   "eslintConfig": {
     "root": true,
