--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "core-js": "^3.8.3",
     "css-loader": "^7.1.2",
     "material-design-icons-iconfont": "^6.7.0",
+    "pinia": "^3.0.4",
     "roboto-fontface": "*",
     "sass": "^1.81.0",
     "sass-loader": "^16.0.3",
