--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "sass-loader": "^16.0.3",
     "styled-loader": "^0.0.0",
     "sweetalert2": "^11.15.10",
+    "swiper": "^12.0.3",
     "vue": "^3.5.13",
     "vue-router": "^4.0.13",
     "vue-sweetalert2": "^5.0.11",
